--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Olá Mundo!</h1>
-    <p>Outra Linha</p>
+    <p>Outra Linha</p><br>
+    <table border="1">
+        <tr><td>X</td><td>O</td><td>X</td></tr>
+        <tr><td>O</td><td>X</td><td>O</td></tr>
+        <tr><td>X</td><td>O</td><td>X</td></tr>
+    </table>
 </body>
 </html>
