Cria um arquivo css e uma tabela

--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Olá Mundo!</h1>
     <p>Outra Linha</p><br>
-    <table border="1">
-        <tr><td>X</td><td>O</td><td>X</td></tr>
-        <tr><td>O</td><td>X</td><td>O</td></tr>
-        <tr><td>X</td><td>O</td><td>X</td></tr>
+    <table border="1" class="tabela">
+
+        <thead>
+            <td>X</td>
+            <td>O</td>
+            <td>X</td>
+        </thead>
+
+        <tbody>
+            <td>O</td>
+            <td>X</td>
+            <td>O</td>
+        </tbody>
+
+        <tfoot>
+            <td>X</td>
+            <td>O</td>
+            <td>X</td>
+        </tfoot>
+
     </table>
 </body>
 </html>
