--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel= "stylesheet" href="style.css">
+    <script src="script.js" defer ></script>
 </head>
 <body>
     <h1>Olá Mundo!</h1>
     <p>Outra Linha</p><br>
     <table border="1" class="tabela">
 
-        <thead>
-            <td>X</td>
-            <td>O</td>
-            <td>X</td>
-        </thead>
-
         <tbody>
-            <td>O</td>
-            <td>X</td>
-            <td>O</td>
-        </tbody>
+            <tr>
+                <td onclick="marca(this)"></td>
+                <td onclick="marca(this)"></td>
+                <td onclick="marca(this)"></td>
+            </tr>
+            <tr>
+                <td onclick="marca(this)"></td>
+                <td onclick="marca(this)"></td>
+                <td onclick="marca(this)"></td>
+            </tr> 
+            <tr>
+                <td onclick="marca(this)"></td>
+                <td onclick="marca(this)"></td>
+                <td onclick="marca(this)"></td>
+            </tr>
 
-        <tfoot>
-            <td>X</td>
-            <td>O</td>
-            <td>X</td>
-        </tfoot>
+        </tbody>
 
     </table>
 </body>
